Redesign and prettify the frontend

--- a/frontend/src/styles/AppWrapper.scss
+++ b/frontend/src/styles/AppWrapper.scss
@@ -1,13 +1,24 @@
 // Variables
 //=======================================
-$header-height: 8vh;
+$header-height: 6vh;
 
 // AppWrapper
 //=======================================
 #app-wrapper {
-  background-color: #cef3b7;
+  background-color: #b7ecf3;
   margin: $header-height 0 $header-height 0;
   min-height: calc(100vh - 2 * #{$header-height});
+  display: flex;
+  justify-content: center;
+}
+
+p, button, input, textarea {
+  margin: 1vh 1vw 1vh 1vw;
+}
+
+label {
+  display: flex;
+  justify-content: center;
 }
 
 // Header
@@ -15,12 +26,15 @@ $header-height: 8vh;
 #header {
   align-items: center;
   background-color: white;
-  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+  //filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+  display: flex;
+  justify-content: center;
   height: $header-height;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 99;
+  //margin-bottom: 10vh;
 }
 
 // Footer
@@ -47,7 +61,7 @@ $header-height: 8vh;
   text-decoration: none;
 }
 
-#tla-logo {
+#board-logo {
   height: 1.66em;
   vertical-align: -0.5em;
 }
