--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -1,18 +1,21 @@
-.table-row{
-    display: flex;           display: -webkit-flex;
-    flex-direction: row;     -webkit-flex-direction: row;
-    flex-grow: 0;            -webkit-flex-grow: 0;
-    flex-wrap: wrap;         -webkit-flex-wrap: wrap;
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+.table-row {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
 }
-table, td, th {  
- //  border: 1px solid #ddd;
+
+
+table {
+  margin: 0 auto;
 }
-table{
-    margin:0 auto;
-}
-label{
-    float:right;
+
+label {
+  float: right;
 }
